# shop_list_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
shop_list_bot/: .pre-commit-comfig.yaml  Dockerfile  README.md  dockerfile  pyproject.prod.toml  pyproject.toml
shop_list_bot/src/: __init__.py  main.py
shop_list_bot/src/core/: __init__.py  logger.py  settings.py
shop_list_bot/src/db/: __init__.py  postgres_manager.py  sqlite_manager.py
shop_list_bot/src/interfaces/databases/: base.py  cart_interface.py  product_interface.py  user_interface.py
shop_list_bot/src/repositories/: factory.py
shop_list_bot/src/repositories/sqlite/: base.py  base_sqlite.py  cart_repository.py  exeptions.py  product_repository.py  user_repository.py
shop_list_bot/src/schemas/: models.py
