[project]
name = "shop-list-bot"
version = "0.1.0"
description = "Telegram bot for shopping lists"
authors = [{name = "Vl Nagibin", email = "vlnagibin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.5",
    "pydantic-settings>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "mypy-extensions>=1.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "ruff-lsp>=0.0.62",
    "safety>=3.7.0",
    "types-aiofiles>=25.1.0.20251011",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Конфигурация Ruff
[tool.ruff]
target-version = "py313"
fix = true  # Исправлять ошибки автоматически
output-format = "full"  # Уровень детализации вывода

[tool.ruff.lint]
# Включаемые правила
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "RUF", # Ruff-specific rules
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "TRY", # tryceratops
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "LOG", # flake8-logging-format
    "B008", # flake8-bugbear: do not perform function calls in argument defaults
    "B009", # flake8-bugbear: do not call getattr with a constant attribute value
]

# Исключаемые файлы/папки
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "migrations",
    "node_modules",
    "*.pyi",
]

ignore = [
    # "ANN101",  # Missing type annotation for `self` in method
    # "ANN102",  # Missing type annotation for `cls` in classmethod
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D107",    # Missing docstring in `__init__`
    "ERA001",  # Commented out code
    "S101",    # Use of `assert` detected
    "SLF001",  # Private member access
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

# max-complexity = 10  # Максимальная сложность когнитивной нагрузки
# line-length = 78  # Максимальная длина строки

[tool.ruff.lint.isort]
known-first-party = ["src", "core"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

# Конфигурация mypy (Pydantic плагин включен автоматически)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Игнорировать отсутствующие импорты для некоторых модулей
ignore_missing_imports = true

# Плагины
plugins = [
    "pydantic.mypy"
]

# Включаем строгий режим постепенно
[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "telegram.ext.*",
    "aiogram.*",
]

[[tool.mypy.overrides]]
module = [
    "src.*",
    "core.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Конфигурация pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests",
]

# Конфигурация coverage
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# В pyproject.toml или отдельном файле
[tool.taskipy.tasks]
# Проверка и форматирование
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
check = "ruff check . && mypy ."

# Безопасность
security = "bandit -r src/ && safety check"

# Тестирование
test = "pytest -v"
test-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html"

# Запуск приложения
run = "uv run src/main.py"

# Установка зависимостей
install = "uv sync"
install-dev = "uv sync --all-extras"

# Очистка
clean = "rm -rf .mypy_cache .pytest_cache .ruff_cache __pycache__ *.pyc"
